--- a/src/components/css/Header.css
+++ b/src/components/css/Header.css
@@ -3,14 +3,14 @@
     width: 100%;
     justify-content: space-between;
     height: 96px;
-    margin-top: 8px;
+    margin-top: 35px;
+    padding: 0 200px;
 }
 
 .Logo {
     display: flex;
+    justify-content: left;
     width: 33%;
-    justify-content: center;
-    object-fit: contain;
     cursor: pointer;
 }
 
@@ -54,7 +54,7 @@
 .SideMenuBar {
     display: flex;
     width: 33%;
-    justify-content: center;
+    justify-content: right;
     align-items: center;
     gap: 15px;
     font-size: 14px;
@@ -65,6 +65,10 @@
 }
 
 @media screen and (max-width: 1080px) {
+    .Header {
+        padding: 0 150px;
+    }
+
     .SearchButton {
         width: 30px;
     }
