--- a/src/pages/Main/index.css
+++ b/src/pages/Main/index.css
@@ -1,9 +1,12 @@
 .Main {
-    margin: 80px 200px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 100px;
 }
 
 @media screen and (max-width: 1080px) {
     .Main {
-        margin: 80px 150px;
+        margin: 80px;
     }
 }
