--- a/src/components/css/temp.css
+++ b/src/components/css/temp.css
@@ -1,6 +1,3 @@
 .SlideContainer {
-    display: flex;
-    width: 100%;
-    display: inline-block;
-    min-width: 200px;
+    min-width:min-content
 }
